# ArdanUltimateRustFoundations

./: Cargo.toml  readme.md
day1/: class_intro.md  day_1_wrap.md  hello_library.md  readme.md  workspaces.md
day1/hour1/: class_intro.md  hello_library.md  hello_world.md  hour_1_wrap.md  setup_ide.md  setup_rust.md  simple_login_test.md  workspaces.md
day1/hour2/: enums.md  hour_2_wrap.md  structs.md
day1/hour3/: hashing.md  hashmaps.md  hour_3_wrap.md  serialization.md  vectors.md
day1/hour4/: cli.md
day2/: readme.md
day2/hour1/: day1_hour2_wrap.md  day2_intro.md  documentation.md  errors.md  modules.md
day2/hour2/: borrow_checker.md  intro.md  lifetimes.md  oop.md  raii.md
day2/hour3/: atomic.md  count_primes.md  data_race.md  rayon.md  shared.md
day2/hour4/: channels.md  tcp_server.md  tokio.md
day3/: readme.md
day3/hour1/: globals.md  new_types.md  sync.md  traits.md
day3/hour2/: constants.md  generic_complex.md  generic_data.md
day4/: readme.md
day4/hour1/: benchmarks.md  benchmarks2.md  dashmap.md  feature_flags.md  macros.md  netbench.md  nostd.md  parking_lot.md  rocket.md  safety.md  tcp_login.md
images/: .~lock.Timing Estimate.ods#  Timing Estimate.ods
src/: main.rs
src/auth_enum/src/: lib.rs
src/auth_enum2/: Cargo.toml
src/auth_enum2/src/: lib.rs
src/auth_enum3/: Cargo.toml
src/auth_enum3/src/: lib.rs
src/auth_enum_exe/: Cargo.toml
src/auth_enum_exe/src/: main.rs
src/auth_enum_exe3/: Cargo.toml
src/auth_enum_exe3/src/: main.rs
src/auth_enum_fn/: Cargo.toml
src/auth_enum_fn/src/: lib.rs
src/auth_enum_fn_exe/: Cargo.toml
src/auth_enum_fn_exe/src/: main.rs
src/auth_hashmap/src/: lib.rs
src/auth_hashmap_exe/: Cargo.toml
src/auth_hashmap_exe/src/: main.rs
src/auth_if/: Cargo.toml
src/auth_if/src/: lib.rs
src/auth_if_exe/: Cargo.toml
src/auth_if_exe/src/: main.rs
src/auth_json/: Cargo.toml
src/auth_json/src/: lib.rs
src/auth_json_exe/: Cargo.toml
src/auth_json_exe/src/: main.rs
src/auth_passwords/: Cargo.toml
src/auth_passwords/src/: lib.rs
src/auth_passwords_exe/: Cargo.toml  users.json
src/auth_passwords_exe/src/: main.rs
src/auth_struct/src/: lib.rs
src/auth_struct_exe/: Cargo.toml
src/auth_struct_exe/src/: main.rs
src/auth_userman/: Cargo.toml
src/auth_userman/src/: lib.rs
src/auth_vec/src/: lib.rs
src/auth_vec_exe/: Cargo.toml
src/auth_vec_exe/src/: main.rs
src/bench/: Cargo.toml
src/bench/src/: lib.rs
src/borrow_iter/: Cargo.toml
src/borrow_iter/src/: main.rs
src/borrow_move1/: Cargo.toml
src/borrow_move1/src/: main.rs
src/borrow_move2/: Cargo.toml
src/borrow_move2/src/: main.rs
src/borrow_move3/: Cargo.toml
src/borrow_move3/src/: main.rs
src/borrow_move4/: Cargo.toml
src/borrow_move4/src/: main.rs
src/borrow_move5/: Cargo.toml
src/borrow_move5/src/: main.rs
src/borrow_oops/: Cargo.toml
src/borrow_oops/src/: main.rs
src/borrow_oops2/: Cargo.toml
src/borrow_oops2/src/: main.rs
src/borrow_oops3/: Cargo.toml
src/borrow_oops3/src/: main.rs
src/count_primes/: Cargo.toml
src/count_primes/src/: main.rs
src/count_primes_atomic/: Cargo.toml
src/count_primes_atomic/src/: main.rs
src/count_primes_atomic_many/: Cargo.toml
src/count_primes_atomic_many/src/: main.rs
src/count_primes_bad/: Cargo.toml
src/count_primes_bad/src/: main.rs
src/count_primes_rayon/: Cargo.toml
src/count_primes_rayon/src/: main.rs
src/count_primes_rayon2/: Cargo.toml
src/count_primes_rayon2/src/: main.rs
src/count_primes_shared/: Cargo.toml
src/count_primes_shared/src/: main.rs
src/count_primes_shared2/: Cargo.toml
src/count_primes_shared2/src/: main.rs
src/cpp/Primes/: Primes.cpp  Primes.sln  Primes.vcxproj  Primes.vcxproj.filters
src/cpp/Primes/x64/Release/: Primes.exe.recipe  Primes.iobj  Primes.ipdb  Primes.vcxproj.FileListAbsolute.txt
src/cpp/Primes/x64/Release/Primes.tlog/: CL.command.1.tlog  (+7 more)
src/dashmap/: Cargo.toml
src/dashmap/src/: main.rs
src/docs/: Cargo.toml
src/docs/src/: lib.rs  user.rs
src/docs/src/login_action/: action.rs  denied_reason.rs
src/docs_exe/: Cargo.toml
src/docs_exe/src/: main.rs
src/errors1/: Cargo.toml
src/errors1/src/: main.rs
src/errors2/: Cargo.toml
src/errors2/src/: main.rs
src/errors3/: Cargo.toml
src/errors3/src/: main.rs
src/file_lock/: Cargo.toml
src/file_lock/src/: main.rs
src/flags_exe/: Cargo.toml
src/flags_exe/src/: main.rs
src/flags_lib/: Cargo.toml
src/flags_lib/src/: lib.rs
src/generic_data/: Cargo.toml
src/generic_data/src/: main.rs
src/generic_data_complex/: Cargo.toml
src/generic_data_complex/src/: main.rs
src/globals/: Cargo.toml
src/globals/src/: main.rs
src/hello_as_a_service/: Cargo.toml
src/hello_as_a_service/src/: lib.rs
src/hello_auth/: Cargo.toml
src/hello_login_system/: Cargo.toml
src/hello_service_exe/: Cargo.toml
src/hello_service_exe/src/: main.rs
src/hello_tokio/: Cargo.toml
src/hello_tokio/src/: main.rs
src/lifetime_func/: Cargo.toml
src/macros/src/: main.rs
src/modules1/: Cargo.toml
src/modules1/src/: lib.rs
src/modules1_exe/: Cargo.toml
src/modules1_exe/src/: main.rs
src/modules2/: Cargo.toml
src/modules2/src/: lib.rs
src/modules2/src/login_action/: mod.rs  role.rs
src/rayon_threads/: Cargo.toml
src/rayon_threads/src/: main.rs
src/rc_bench/: Cargo.toml
src/rc_bench/src/: atomic_rc_cat.rs  cat_store.rs  cat_vec.rs  main.rs  rc_cat.rs
src/rocket/: Cargo.toml
src/rocket2/: Cargo.toml  login.html
src/rocket2/src/: main.rs
src/tcp_login_server/: Cargo.toml  users.json
src/tcp_login_server/src/: main.rs
src/tcp_login_server_bench/: Cargo.toml
src/tcp_login_server_bench/src/: main.rs
src/thread_channels/: Cargo.toml
src/thread_channels/src/: main.rs
src/tokio_channels/: Cargo.toml
src/tokio_channels/src/: main.rs
src/tokio_channels2/: Cargo.toml
src/tokio_channels2/src/: main.rs
src/tokio_rpc/: Cargo.toml
src/tokio_rpc/src/: main.rs
src/tokio_tcp/: Cargo.toml
src/tokio_tcp/src/: main.rs
src/userman/: Cargo.toml  users.json
src/userman/src/: main.rs
